--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "regenerator-runtime": "^0.13.5",
     "vant": "^2.10.2",
     "vue": "^2.6.11",
+    "vue-mobile-audio": "^0.1.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
