--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "fastclick": "^1.0.6",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "lib-flexible": "^0.3.2",
