--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,4 @@
 NODE_ENV='production'
 # must start with VUE_APP_
 VUE_APP_ENV = 'production'
-VUE_APP_API_URL = 'http://39.107.245.157:8081'
- 
+VUE_APP_API_URL = ''
