--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "compressorjs": "^1.0.7",
     "core-js": "^3.6.4",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
